fixed the alignment (Finally)

--- a/Frontend/CSS/style_apple.css
+++ b/Frontend/CSS/style_apple.css
@@ -85,6 +85,7 @@ header {
     gap: 8px;
 }
 
+
 .profile {
     width: 24px;
     height: 24px;
@@ -95,6 +96,11 @@ header {
 
 main {
     padding: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
 }
 
 section {
@@ -120,21 +126,28 @@ h2 {
     font-size: 12px;
 }
 
+.product-details {
+    background: none;
+    width: 350px;
+    display: flexbox;
+    justify-content: right;
+}
+
 .product-name {
-    font-size: 26px;
+    font-size: 24px;
     margin-bottom: 4px;
     margin-right: 10px;
-    width: 350px;
+    width: auto;
     display: flex;
     align-items: center;
     justify-content: right;
 }
-
 .product-price {
     font-size: 12px;
     color: var(--blacks);
     display: flex;
-    width: 350px;
+    width: auto;
+    height: auto;
     margin-right: 10px;
     align-items: center;
     justify-content: right;
@@ -146,7 +159,9 @@ h2 {
     background: var(--buy-button);
     border: none;
     cursor: pointer;
+    margin-right: 10px;
     color: #fff;
+    width: 65px;
     font-size: 12px;
     display: flex;
     align-items: center;
@@ -170,6 +185,21 @@ footer {
     color: white;
     font-family: Arial, sans-serif;
 }
+
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 25px;
+}
+
+.footer-left,
+.footer-right {
+    display: flex;
+    flex-direction: column;
+    color: var(--footer-placeholder);
+}
+
 a:link {
     color: white;
     background: transparent;
@@ -184,20 +214,6 @@ a:hover {
     color: antiquewhite;
     background: transparent;
     text-decoration: none;
-}
-.footer-content {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin-bottom: 25px;
-}
-
-.footer-left,
-.footer-right {
-    display: flex;
-    flex-direction: column;
-    color: var(--footer-placeholder);
-    text-decoration-color: var(--whites);
 }
 
 .footer-title {
